--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ h6 {
   font-style: normal;
   font-weight: 900;
   src: url("../fonts/Inter-Black.woff2") format("woff2"),url("../fonts/Inter-Black.woff") format("woff"),url("../fonts/Inter-Black.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -120,6 +121,7 @@ h6 {
   font-style: normal;
   font-weight: 800;
   src: url("../fonts/Inter-ExtraBold.woff2") format("woff2"),url("../fonts/Inter-ExtraBold.woff") format("woff"),url("../fonts/Inter-ExtraBold.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -127,6 +129,7 @@ h6 {
   font-style: normal;
   font-weight: 700;
   src: url("../fonts/Inter-Bold.woff2") format("woff2"),url("../fonts/Inter-Bold.woff") format("woff"),url("../fonts/Inter-Bold.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -134,6 +137,7 @@ h6 {
   font-style: normal;
   font-weight: 600;
   src: url("../fonts/Inter-SemiBold.woff2") format("woff2"),url("../fonts/Inter-SemiBold.woff") format("woff"),url("../fonts/Inter-SemiBold.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -141,6 +145,7 @@ h6 {
   font-style: normal;
   font-weight: 500;
   src: url("../fonts/Inter-Medium.woff2") format("woff2"),url("../fonts/Inter-Medium.woff") format("woff"),url("../fonts/Inter-Medium.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -148,6 +153,7 @@ h6 {
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Inter-Regular.woff2") format("woff2"),url("../fonts/Inter-Regular.woff") format("woff"),url("../fonts/Inter-Regular.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -155,6 +161,7 @@ h6 {
   font-style: normal;
   font-weight: 300;
   src: url("../fonts/Inter-Light.woff2") format("woff2"),url("../fonts/Inter-Light.woff") format("woff"),url("../fonts/Inter-Light.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -162,6 +169,7 @@ h6 {
   font-style: normal;
   font-weight: 200;
   src: url("../fonts/Inter-ExtraLight.woff2") format("woff2"),url("../fonts/Inter-ExtraLight.woff") format("woff"),url("../fonts/Inter-ExtraLight.otf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
@@ -169,6 +177,7 @@ h6 {
   font-style: normal;
   font-weight: 100;
   src: url("../fonts/Inter-Thin.woff2") format("woff2"),url("../fonts/Inter-Thin.woff") format("woff"),url("../fonts/Inter-Thin.otf") format("opentype");
+  font-display: swap;
 }
 
 .global-wrapper {
